# LogLensAi

./: .codannaignore  .coverage  .env.example  .env.web  .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  Dockerfile.sidecar  GEMINI.md  README.md  TODO.md  bench_results_pro.json  biome.json  biome_errors.txt  biome_errors_utf8.txt  check_api.py  check_db.py  commander_prompt.md  errors.json  fix_clustering.py  fix_clustering2.py  fix_clustering_miner.py  fix_graph.py  fix_graph_imports.py  fix_test_ssh.py  fix_tests.py  fix_tests_imports.py  index.html  lefthook.yml  lint_output.txt  package-lock.json  package.json  projectTestSummary.md  pyproject.toml  pyrightconfig.json  recreate.sh  recreate_sidecar.sh  refactor_api_arrow.py  refactor_batch.py  (+19 more)
.agents/: agents.md
.agents/rules/: ArchitectureDocumentation.md  AutonomousExecution.md  ProjectTracking.md  Quality.md  SoftwareStandards.md  UIReviewProtocol.md  ai_driven_comment.md
.agents/skills/: generate_backend_code.md  generate_code.md  lint-sidecar.md  (+3 more)
.antigravitycli/: 2cf8c7ec-f797-440f-ae6a-ab1ed3215c6a.json  55ebc2fc-c88b-4c0a-b67a-c182bcec5462.json  5953c698-403f-44f6-bcdb-019a009513d8.json  bb4117bb-bec6-46e6-80a4-618c634513f7.json  bccd39ed-ae79-4d43-ae7d-22e2b4d60ae3.json
.beads/: issues.jsonl  metadata.json
.gemini/: setting.json
.ralph-state/: history.json  state.json
conductor/: FEATURE_AUDIT_2026_04_PLAN.md  ai-provider-settings-overhaul-plan.md  antigravity-workflow-commands-plan.md  fix-app-loop-and-api-spam-plan.md
data/: ai_state.sqlite
docs/: API_SPEC.md  Features.md  PRD.md  checklist.md  exported-Debugging Clustering Worker Errors.md  jules_instruct.md  migrationtogo.md  project-report-2026-04-23.md  project_summary.md
scratch/: check_api.py  check_api_names.py  check_db.py  check_drain.py  check_drain_2.py  check_max_timestamp.py  check_root_db.py  check_settings.py  db_dump.py  inspect_db.py  migrate_data.py  ollama_diagnostic.py  query_db.py  query_loglines.py  read_log.py  refactor_batch.py  refactor_clustering_facets.py  refactor_graph.py  refactor_ingestion_queue.py  remove_single_log.py  repair_index.py  test_dashboard_rpc.py  test_parser.js  test_parser.py  test_rpc.py  test_rpc_final.py  verify_hydration.py  verify_hydration_v2.py
scripts/: all_models.txt  clean-sidecar.ps1  db_inspector.py  generate_schema.py  heldb_query.py  ingest_test_logs.py  inspect_db.py  output.txt  output_utf8.txt  setup-gemini-hot.ps1  start-gemini-hot.ps1  verify_ai_studio.py  wipe_db_logs.py
sidecar/: .coverage  check_facets.py  check_masks.py  main.py  pyproject.toml  test_json.py  test_json_keys.py
sidecar/data/drain/: global.state
sidecar/scratch/: check_key.py  get_key.py  test_ai_studio.py  test_old_sdk.py  test_sdk_behavior.py
sidecar/scripts/: test_ai_logic.py
sidecar/src/: __init__.py  ai.py  anomalies.py  api.py  api.py.rej  db.py  db.py.rej  ingestion.py  mcp_server.py  metadata_extractor.py  models.py  parser.py  parser.py.rej  query_parser.py  ssh_loader.py  tailer.py  tailer.py.rej
sidecar/src/ai/: __init__.py  ai_studio.py  base.py  context.py  context_manager.py  gemini_cli.py  graph.py  ollama.py  openai_compatible.py  reasoning.py  runner.py  thinking_parser.py  tools.py
sidecar/src/scratch/: check_imports.py
sidecar/src/services/: __init__.py  fast_path.py  log_file_store.py  rag_service.py  shared_core.py
sidecar/src/workers/: clustering.py
sidecar/tests/: conftest.py  test_ai_logic.py  test_ai_persistence.py  test_ai_providers.py  test_ai_studio.py  test_ai_tools.py  test_anomalies.py  test_anomaly_persistence.py  test_api.py  test_api_dashboard.py  test_api_extra.py  test_api_fuzz.py  test_api_methods.py  test_api_runners.py  test_clustering_worker.py  test_context.py  test_context_manager.py  test_db_extra.py  test_db_internals.py  test_e2e_ingestion.py  test_export.py  test_filters.py  test_full_pipeline.py  test_fusion.py  test_hierarchy.py  test_hybrid_orchestration.py  test_ingestion_ports.py  test_llql.py  test_llql_new.py  test_lmstudio_provider.py  test_mcp.py  test_metadata.py  test_metadata_extractor.py  test_openai_provider.py  test_parser.py  test_reasoning_shim.py  test_shared_core.py  test_ssh.py  test_stats.py  test_tailing.py  (+2 more)
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
(+589 files in other folders)
