[project]
name = "loglensai-sidecar"
version = "0.1.0"
description = "High-performance Python sidecar for LogLensAi (DuckDB + Drain3)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.0",
    "drain3>=0.15.5",
    "pydantic>=2.10.0",
    "datamodel-code-generator>=0.26.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["B008"]
