[project]
name = "loglensai-sidecar"
version = "0.1.0"
description = "LogLensAi Python Sidecar"
authors = [{name = "Jules"}]
dependencies = [
    "duckdb>=1.2.0",
    "drain3>=0.9.11",
    "aiohttp>=3.11.0",
    "aiohttp-cors>=0.7.0",
    "paramiko>=3.5.0",
    "pydantic>=2.10.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "mcp>=1.26.0",
    "google-generativeai>=0.8.6",
    "google-genai>=1.0.0",
    "google-adk>=2.0.0a2",
    "python-dotenv>=1.2.2",
]
requires-python = ">=3.12"

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src"]
